# TextAnalyzer

./: .gitignore  CMakeLists.txt  TextAnalyzer.sln  main.cpp
TextAnalyzer/: CMakeLists.txt  Source.cpp  TextAnalyzer.vcxproj  file.txt
TextAnalyzer/include/: TextAnalyzer.hpp
TextAnalyzer/src/: TextAnalyzer.cpp
TextAnalyzer/tests/: CMakeLists.txt  TextAnalyzer_test.cpp
